--- a/python3_scratchpad/__author_solution_scrambled.html
+++ b/python3_scratchpad/__author_solution_scrambled.html
@@ -1,14 +1,14 @@
-<div class="coderunner-test-results good">
-    <a class="btn btn-link coderunner-solution-link" style="background-color:#CFC">Show author's solution</a>
+<div class="coderunner-test-results bad">
+    <a class="btn btn-link coderunner-scrambled-solution-link" style="background-color:#FCC">Show scrambled author's solution</a>
 </div>
-<div class="coderunner-authors-solution collapse" expanded="false" style="margin-bottom:8px">
+<div class="coderunner-scrambled-authors-solution collapse" expanded="false" style="margin-bottom:8px">
     <pre class="code-highlight">%s</pre>
 </div>
 <script>
     window.coderunner_solution_link_clicked = window.coderunner_solution_link_clicked || function(src) {
         var question = src.target.closest('div.specificfeedback');
-        var solution_div = question.getElementsByClassName('coderunner-authors-solution')[0];
-        var solution_link = question.getElementsByClassName('coderunner-solution-link')[0];
+        var solution_div = question.getElementsByClassName('coderunner-scrambled-authors-solution')[0];
+        var solution_link = question.getElementsByClassName('coderunner-scrambled-solution-link')[0];
         var code = question.getElementsByClassName('code-highlight')[0];
 
         if (!code.classList.contains('has-highlight')) {
@@ -24,17 +24,17 @@
         
         if (!$(solution_div).hasClass('collapsing')) {
             if ($(solution_div).attr("expanded") === "true") {
-                solution_link.innerHTML = "Show author's solution";
-                $(solution_div).hide(300);
+                solution_link.innerHTML = "Show scrambled author's solution";
+                $(solution_div).collapse('hide');
                 $(solution_div).attr("expanded", "false");
             } else {
-                solution_link.innerHTML = "Hide author's solution";
-                $(solution_div).show(300);
+                solution_link.innerHTML = "Hide scrambled author's solution";
+                $(solution_div).collapse('show');
                 $(solution_div).attr("expanded", "true");
             }
         }
     }
-    var coderunner_all_links = document.getElementsByClassName('coderunner-solution-link');
+    var coderunner_all_links = document.getElementsByClassName('coderunner-scrambled-solution-link');
  
     for (var i = 0; i < coderunner_all_links.length; i++) {
         var el = coderunner_all_links[i];
