--- a/python3_deskcheck/prototypeextra.html
+++ b/python3_deskcheck/prototypeextra.html
@@ -8,6 +8,9 @@
 {% set has_output = 1 %}
 {% endif %}
 <style>
+div.sst-ui {
+    padding: 10px;
+}
 
 /* Table, th and td styles */
 table.sst {
@@ -106,7 +109,7 @@ table.sst input.cr-filled-down {
 
 </style>
 
-<div id="___textareaId___-desktop-ui">
+<div id="___textareaId___-sst-ui-div" class="sst-ui">
 <table class="sst" border="1">
 <thead>
 <tr>
@@ -255,19 +258,23 @@ function loadClasses() {
     } 
 }
 
-// Kill the enter key from submitting the form.
+// Kill the enter key from submitting the form. 
+// Catches Enter key used in the variable name or output fields.
 function kill_enter() {
-    const div = document.getElementById("___textareaId___-desktop-ui");
-    div.addEventListener("keydown", event=>{
+    const div = document.getElementById("___textareaId___-sst-ui-div");
+    const elements = div.querySelectorAll(".cr-variable-name,.cr-output");
+    for (let i=0; i < elements.length; i++) {
+        elements[i].addEventListener("keydown", event=> {
                 if (event.keyCode === 13) {
                     event.preventDefault();
                 }
             });
+    }
 }
 
 // Set up a handler for each variable value (change or Enter key)
 function addVarChangedHandlers() {
-    const parentDiv = document.getElementById("___textareaId___-desktop-ui");
+    const parentDiv = document.getElementById("___textareaId___-sst-ui-div");
     const elements = parentDiv.querySelectorAll(".cr-variable");
     for (let i=0; i < elements.length; i++) {
         const element = elements[i];
