--- a/python3_sst/prototypeextra.html
+++ b/python3_sst/prototypeextra.html
@@ -52,6 +52,11 @@
             border: none;
             padding: 0px 7px 0px 7px;
         }
+
+        table.sst td.cr-blank.cr-separator {
+            background-color: #d2d2e8;
+            border:1px solid black
+        }
         
         table.sst td.cr-bottom {
             border-bottom: 3px solid black;
